Fix grid overlay z-index to render above canvas chunks

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -623,7 +623,7 @@
 	}
 
 	.canvasOverlay {
-		@apply absolute hidden left-0 top-0;
+		@apply absolute hidden left-0 top-0 z-10;
 
 		&.enabled {
 			@apply block;
